TRITON-1144 convert sdc-dockerlogger to engbld framework Reviewed by: Trent Mick <trentm@gmail.com> Approved by: Trent Mick <trentm@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-build
+/bits
+/build
+/make_stamps
 dockerlogger
 dockerlogger.smartos
+dockerlogger*.manifest
+dockerlogger*.md5sum
+dockerlogger*.sh
 node_modules
